j--/tests/fail/Operators.java
package fail;

public class Operators {
    
    public static void main(String[] args) {
        System.out.println('a' | 42);
    }
}
